--- a/index.html
+++ b/index.html
@@ -189,34 +189,20 @@
 
           <!-- Column for picture -->
 
-          <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
+          <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF">
 
-            <!-- Video SignLab Onderzoeksdag -->
-            <div class="embed-responsive embed-responsive-16by9 mb-5">
-              <iframe src="https://www.youtube.com/embed/jjNHJQwm-Tc?rel=0&autoplay=1&playlist=jjNHJQwm-Tc&loop=1" title="SignLab Open Avond" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div> 
+            <!-- Tekst Nacholing tolken ja/nee vragen -->
+            <div class="project-text w-100 text-left">
+              <h5><b>Nascholing ‘Honderd manieren om een ja/nee-vraag te stellen in NGT’</b></h5>
+              <p>
+                Op <b>vrijdag 31 oktober 2025</b> organiseren Cindy van Boven, Floris Roelofsen, Tobias de Ronde en Irma Sluis een eendaagse nascholing over polaire vraagzinnen (ja/nee-vragen) in de Nederlandse Gebarentaal voor (dove) tolken NGT! <b>Je kunt je nog aanmelden via deze link:</b> <a href="https://forms.gle/iMjCTkV5vVAisQN1A">https://forms.gle/iMjCTkV5vVAisQN1A</a>. <br><br>
 
-            <!-- Tekst SignLab Onderzoeksdag -->
-            <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
-              <h5><b>Doe mee aan de SignLab Onderzoeksdag!</b></h5>
-              <p class="mb-6 mt-6">
-                Meld je <a href="https://uva.fra1.qualtrics.com/jfe/form/SV_7OQEch7ZKqGeaPk">hier</a> aan om deel te nemen aan één van de SignLab Onderzoeksdagen, op <b>dinsdag 9</b> of <b>zaterdag 13 september</b> 2025</b>! Tijdens de Onderzoeksdag doe je samen met anderen mee als deelnemer aan twee onderzoeksprojecten van SignLab Amsterdam. Dit duurt de hele dag, maar natuurlijk met genoeg pauzes. Wij zorgen ook voor een lekkere lunch! 
- 
-                Je kunt aan de onderzoeksdag meedoen als je <b>dove NGT-gebaarder</b> bent. Als dank voor je deelname ontvang je bol.com-bonnen. Ook is er een reiskostenvergoeding. Klik op <a href="https://uva.fra1.qualtrics.com/jfe/form/SV_7OQEch7ZKqGeaPk">deze link</a> voor meer informatie en om je aan te melden.
+                In deze nascholing duiken we in een essentieel onderdeel van de NGT-grammatica: polaire vraagzinnen (ja/nee-vragen). Of je nu tolkt in het onderwijs, in de zorg of bij zakelijke bijeenkomsten, ja/nee-vragen komen voortdurend voor. De juiste vraagmarkering (non-manueel en manueel) is van belang om subtiele maar cruciale verschillen in betekenis en intentie over te brengen. Bijvoorbeeld is de spreker verbaasd is of heeft de spreker een bepaalde verwachting. Zo zou je een zin die gebaard wordt als: KIM THUIS, kunnen vertalen als: Is Kim thuis? of Kim is thuis, toch? Of Denk jij dat Kim thuis is?<br><br>
+                Tijdens deze training ontwikkel je een beter begrip van vraagmarkering, zodat je in ieder type gesprek vlot en accuraat kunt schakelen tussen NGT en Nederlands en vice versa. Daarbij geeft de training concrete handvatten om je timing en non-manuele markering te verfijnen. Naast de theorie gaan we ook praktisch aan de slag en oefenen we met dove gasten en elkaar.<br><br>
+                Deze scholing is een kans om op basis van recent wetenschappelijk onderzoek je kennis te verdiepen en je vaardigheden te verbeteren. Door nieuwe inzichten direct in je tolkwerk te integreren, blijf je als tolk up-to-date en kwalitatief functioneren. Met kennis van polaire vraagzinnen minimaliseer je het risico op communicatiestoringen tussen dove en horende gesprekspartners.<br><br>
 
-                <!-- Signlab is organizing another open evening on April 19, 2024. Are you coming? This evening 
-                we will talk about the research we are doing sign languages.
-                The open evening is held at the University Library, Singel 425 Amsterdam, Room C007 (Doelenzaal). 
-                Registration is mandatory and can be done until April 12 (or until the maximum number of registrations is reached).<br><br>
-                The registration form is <a href="https://uva.fra1.qualtrics.com/jfe/form/SV_6Eui1omADfYPI6G">here</a>.<br><br>
-                The program is as follows: <br><br>
-                6.15 PM Walk-in <br>
-                6:30-8:30 PM Presenations and demos <br>
-                8:30-10:00 PM Drinks! <br><br>
-                The event will be in NGT and Dutch. NGT-NL interpreters will be present all evening.
-                Questions or remarks? Feel free to email us at signlab@uva.nl.
-                We also ask you to email us if you have registered, but can no longer come. Maybe someone else can fill the spot. <br> -->
-                
+                Locatie: UvA, UB, Vendelstraat 2-8, Amsterdam <br>
+                Tijd: 9:30 - 16:30
               </p>                 
               <hr class="d-none d-lg-block mb-5 ml-0" />
             </div>
