--- a/projects.html
+++ b/projects.html
@@ -63,6 +63,15 @@
 <section class="projects-section bg-light fadeIn" id="Projects">
     <div class="container-fluid">
 
+      <!-- Title -->
+      <div class="row align-items-start mb-1">
+          <div class="col-12 col-md order-2">
+            <div class="project-text text-left pb-1 w-100 my-auto no-top-padding textDIV">
+              <h2 class="section-heading mb-5">Projects</h2>
+            </div>
+          </div>
+      </div>
+
       <!-- Challenge Row First two projects-->
       <div class="row align-items-start mb-4 mb-md">
 
