--- a/research-applications.html
+++ b/research-applications.html
@@ -65,16 +65,21 @@
 <section class="projects-section bg-light fadeIn" id="Applications">
   <div class="container-fluid">
 
+    <!-- Title -->
+      <div class="row align-items-start mb-1">
+          <div class="col-12 col-md order-2">
+            <div class="project-text text-left pb-1 w-100 my-auto no-top-padding textDIV">
+              <h2 class="section-heading mb-5">Applications</h2>
+            </div>
+          </div>
+      </div>
+
         <!-- Application domains-->
-        <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+        <div class="row align-items-start">
             <!-- Column for text -->
             <div class="col-12 col-md order-1">
-
               <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
-                  
-                <h2 class="section-heading mb-5">Applications</h2>
-
-                <h5 class="mt-5">Application domains</h5>
+                <h5>Application domains</h5>
                 <p class="mb-4">
                   We are particularly interested in the following application domains: 
                     <ul>
