--- a/research-datasets.html
+++ b/research-datasets.html
@@ -68,11 +68,8 @@
 
       <!-- Title -->
       <div class="row align-items-start mb-1">
-        <!-- Column for images -->
-        <!-- <div class="col-12 col-md-5 order-1 ml-md-5"></div> -->
-
           <div class="col-12 col-md order-2">
-            <div class="project-text pb-1 w-100 my-auto no-top-padding textDIV">
+            <div class="project-text text-left pb-1 w-100 my-auto no-top-padding textDIV">
               <h2 class="section-heading mb-5">Datasets</h2>
             </div>
           </div>
@@ -80,13 +77,6 @@
 
       <!-- Global SignBank -->
       <div class="row align-items-start">
-        <!-- Column for images -->
-        <div class="col-12 col-md-5 order-1 ml-md-5">
-          <div class="mb-5 mt-20">
-            <a href="https://signbank.cls.ru.nl/datasets/NGT" target="_blank"><img src="images/signbank-screenshot.png" class="img-fluid" alt="Screenshot of the NGT lexicon on Global SignBank."></a>
-          </div>
-        </div>
-
         <!-- Column for text -->
         <div class="col-12 col-md order-2">
           <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
@@ -98,6 +88,14 @@
                 The platform was initially developed by Radboud University in Nijmegen. 
                 Main responsibility was transferred to SignLab Amsterdam in 2023. 
               </p>
+              <hr class="d-none d-lg-block mb-4 ml-0" />
+          </div>
+        </div>
+
+         <!-- Column for images -->
+        <div class="col-12 col-md-5 order-1 order-md-12">
+          <div class="mt-20">
+            <a href="https://signbank.cls.ru.nl/datasets/NGT" target="_blank"><img src="images/signbank-screenshot.png" class="img-fluid" alt="Screenshot of the NGT lexicon on Global SignBank."></a>
           </div>
         </div>
       </div>
@@ -111,13 +109,9 @@
 
       <!-- The NGT lexicon -->
       <div class="row align-items-start">
-        <!-- Column for images -->
-        <div class="col-12 col-md-5 order-1 avatarGIF ml-md-5"></div>
-
         <!-- Column for text -->
-        <div class="col-12 col-md order-2">
+        <div class="col-12 col-md order-2 mb-4">
           <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
-            <hr class="d-none d-lg-block mb-4 ml-0" />
               <h5>The NGT lexicon</h5>
               <p class="mb-4">
                 We also maintain the 
@@ -128,8 +122,12 @@
                 their possible interpretations (multiple senses and links to the Open Multilingual Wordnet),
                 and their usage (example sentences). We are still in the process of adding more signs and more information.
               </p>
+              <hr class="d-none d-lg-block mb-4 ml-0" />
           </div>
         </div>
+
+        <!-- Column for images -->
+        <div class="col-12 col-md-5 order-1 order-md-12"></div>
       </div>
 
       <!-- Challenge row block-->
@@ -141,17 +139,9 @@
 
       <!-- Experimental data -->
       <div class="row align-items-start">
-        <!-- Column for images -->
-        <div class="col-12 col-md-5 order-1 ml-md-5">
-          <div class="mb-5 mt-4">
-            <a href="https://osf.io/rqcv7/" target="_blank"><img src="images/osf-signlab.png" class="img-fluid" alt="Screenshot of the NGT lexicon on Global SignBank."></a>
-          </div>
-        </div>
-
         <!-- Column for text -->
         <div class="col-12 col-md order-2">
             <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
-              <hr class="d-none d-lg-block mb-4 ml-0" />
               <h5>Experimental data</h5>
               <p class="mb-4">  
                 Besides this large, general-purpose dataset, we are also collecting experimental data on specific constructions in NGT 
@@ -159,7 +149,14 @@
                 We make these datasets available to the research community via our
                 <a href="https://osf.io/rqcv7/" target="_blank">OSF repository</a>.
               </p>
+              <hr class="d-none d-lg-block mb-4 ml-0" />
             </div>
+        </div>
+        <!-- Column for images -->
+        <div class="col-12 col-md-5 order-1 order-md-12">
+          <div class="mb-5 mt-4">
+            <a href="https://osf.io/rqcv7/" target="_blank"><img src="images/osf-signlab.png" class="img-fluid" alt="Screenshot of the NGT lexicon on Global SignBank."></a>
+          </div>
         </div>
       </div>
     </div>
