--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="container-fluid">
 
         <!-- Challenge Row first section -->
-        <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+        <div class="row align-items-start mb-4 mb-lg-5">
             <!-- Column for info -->
             <div class="col-12 col-md order-2">
               
