--- a/evenementen.html
+++ b/evenementen.html
@@ -140,7 +140,7 @@
             <!-- Column for text -->
             <div class="col-12 col-md order-1">
               <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
-                <h5>Onderzoeksdag Mei 2025</h5>
+                <h5>Onderzoeksdag mei 2025</h5>
                 <p class="mb-2">
                   Op dinsdag 13 mei 2025 organiseerde SignLab Amsterdam een onderzoeksdag. Tijdens deze dag kwamen onderzoeksdeelnemers naar Amsterdam om mee te doen aan twee taalkundige onderzoeken. Tussendoor hebben we samen geluncht en koffie gedronken. Het was een gezellige dag en een erg waardevolle bijdrage aan onze onderzoeken!
                 </p>
