--- a/evenementen.html
+++ b/evenementen.html
@@ -79,6 +79,27 @@
             <!-- Column for text -->
             <div class="col-12 col-md order-1">
               <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
+                <h5><b>Deelnemers gezocht: Communicatie bij gehoorverlies</b></h5>
+              <p>
+                Bent u tussen de <b>18 en 65 jaar</b>, Nederlandstalig, en <b>slechthorend</b> maar niet volledig doof? Wij zoeken deelnemers voor een wetenschappelijk onderzoek naar communicatie in uitdagende luisteromstandigheden.
+                Wat houdt deelname in? U voert een gesprek met een andere deelnemer in situaties met ruis. De sessie duurt ongeveer <b>1 tot 1,5 uur</b> in ons laboratorium op <b>Science Park, Amsterdam</b>. U ontvangt <b>€15 per uur</b> plus <b>reiskostenvergoeding</b>. U mag op elk moment stoppen; de gegevens worden anoniem verwerkt. <br><br>
+                
+                Interesse of vragen? Neem contact op met <b>Anna Palmann</b>: <a href="emailto:a.palmann@uva.nl">a.palmann@uva.nl</a>.
+              </p>                 
+              <hr class="d-none d-lg-block mb-4 ml-0" />
+              </div>
+            </div>
+
+            <!-- Column for picture -->
+            <div class="col-12 col-md-5 order-2 order-md-12 avatarGIF ml-md-5">
+            </div>
+        </div>
+
+      <!-- Nascholing -->
+        <div class="row align-items-start">
+            <!-- Column for text -->
+            <div class="col-12 col-md order-1">
+              <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
                 <h5>Nascholing ‘Honderd manieren om een ja/nee-vraag te stellen in NGT’</h5>
               <p>
                 Op <b>vrijdag 31 oktober 2025</b> organiseren Cindy van Boven, Floris Roelofsen, Tobias de Ronde en Irma Sluis een eendaagse nascholing over polaire vraagzinnen (ja/nee-vragen) in de Nederlandse Gebarentaal voor (dove) tolken NGT! <b>Je kunt je nog aanmelden via deze link:</b> <a href="https://forms.gle/iMjCTkV5vVAisQN1A">https://forms.gle/iMjCTkV5vVAisQN1A</a>. <br><br>
