--- a/evenementen.html
+++ b/evenementen.html
@@ -74,7 +74,7 @@
           </div>
       </div>
 
-      <!-- Research days August -->
+      <!-- Communication with hearing loss -->
         <div class="row align-items-start">
             <!-- Column for text -->
             <div class="col-12 col-md order-1">
@@ -92,6 +92,7 @@
 
             <!-- Column for picture -->
             <div class="col-12 col-md-5 order-2 order-md-12 avatarGIF ml-md-5">
+                <img src="images/dialogue_flyer_HH.pdf" class="img-fluid" alt="Dialogue hh flyer.">
             </div>
         </div>
 
@@ -153,6 +154,7 @@
 
             <!-- Column for picture -->
             <div class="col-12 col-md-5 order-2 order-md-12 avatarGIF ml-md-5">
+                <img src="images/OpenAvond2025.jpg" class="img-fluid" alt="Open evening 2025.">
             </div>
         </div>
 
