--- a/outreach-events.html
+++ b/outreach-events.html
@@ -107,6 +107,7 @@
 
             <!-- Column for picture -->
             <div class="col-12 col-md-5 order-2 order-md-12 avatarGIF ml-md-5">
+                <img src="images/OpenAvond2025.jpg" class="img-fluid" alt="Open evening 2025.">
             </div>
         </div>
 
